--- a/HslCommunication_Net45.Test/HslCommunication_Net45.Test.csproj
+++ b/HslCommunication_Net45.Test/HslCommunication_Net45.Test.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Profinet\Melsec\MelsecMcNetTest.cs" />
     <Compile Include="Profinet\Panasonic\PanasonicMewtocolTest.cs" />
     <Compile Include="Profinet\Siemens\SiemensTest.cs" />
+    <Compile Include="Profinet\Toyopuc\ToyopucNetTest.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
