--- a/HslCommunication_Net45/HslCommunication_Net45.csproj
+++ b/HslCommunication_Net45/HslCommunication_Net45.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>HslCommunication</RootNamespace>
     <AssemblyName>HslCommunication</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -197,6 +197,7 @@
     <Compile Include="Core\IMessage\ModbusTcpMessage.cs" />
     <Compile Include="Core\IMessage\OpenProtocolMessage.cs" />
     <Compile Include="Core\IMessage\S7Message.cs" />
+    <Compile Include="Core\IMessage\ToyopucMessage.cs" />
     <Compile Include="Core\Net\ClassNetHandle.cs" />
     <Compile Include="Core\Net\CommunicationProtocol.cs" />
     <Compile Include="Core\Net\IReadWriteNet.cs" />
@@ -327,6 +328,9 @@
     <Compile Include="Profinet\Siemens\SiemensPPI.cs" />
     <Compile Include="Profinet\Siemens\SiemensS7Net.cs" />
     <Compile Include="Profinet\Siemens\SiemensS7Server.cs" />
+    <Compile Include="Profinet\Toyopuc\ToyopucDataType.cs" />
+    <Compile Include="Profinet\Toyopuc\ToyopucHelper.cs" />
+    <Compile Include="Profinet\Toyopuc\ToyopucNet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
