--- a/HslCommunication_Net35/HslCommunication_Net35.csproj
+++ b/HslCommunication_Net35/HslCommunication_Net35.csproj
@@ -11,6 +11,21 @@
     <AssemblyName>HslCommunication</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -303,6 +318,9 @@
     </Compile>
     <Compile Include="..\HslCommunication_Net45\Core\IMessage\S7Message.cs">
       <Link>Core\IMessage\S7Message.cs</Link>
+    </Compile>
+    <Compile Include="..\HslCommunication_Net45\Core\IMessage\ToyopucMessage.cs">
+      <Link>Core\IMessage\ToyopucMessage.cs</Link>
     </Compile>
     <Compile Include="..\HslCommunication_Net45\Core\Net\ClassNetHandle.cs">
       <Link>Core\Net\ClassNetHandle.cs</Link>
@@ -674,6 +692,15 @@
     <Compile Include="..\HslCommunication_Net45\Profinet\Siemens\SiemensS7Server.cs">
       <Link>Profinet\Siemens\SiemensS7Server.cs</Link>
     </Compile>
+    <Compile Include="..\HslCommunication_Net45\Profinet\Toyopuc\ToyopucDataType.cs">
+      <Link>Profinet\Toyopuc\ToyopucDataType.cs</Link>
+    </Compile>
+    <Compile Include="..\HslCommunication_Net45\Profinet\Toyopuc\ToyopucHelper.cs">
+      <Link>Profinet\Toyopuc\ToyopucHelper.cs</Link>
+    </Compile>
+    <Compile Include="..\HslCommunication_Net45\Profinet\Toyopuc\ToyopucNet.cs">
+      <Link>Profinet\Toyopuc\ToyopucNet.cs</Link>
+    </Compile>
     <Compile Include="..\HslCommunication_Net45\Robot\EFORT\EfortData.cs">
       <Link>Robot\EFORT\EfortData.cs</Link>
     </Compile>
@@ -913,6 +940,13 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Algorithms\Alarm\" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
