--- a/TestProject/HslCommunicationDemo/HslCommunicationDemo.csproj
+++ b/TestProject/HslCommunicationDemo/HslCommunicationDemo.csproj
@@ -276,6 +276,12 @@
     <Compile Include="PLC\FormLsisFEnet.Designer.cs">
       <DependentUpon>FormLsisFEnet.cs</DependentUpon>
     </Compile>
+    <Compile Include="PLC\FormToyopuc.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PLC\FormToyopuc.designer.cs">
+      <DependentUpon>FormToyopuc.cs</DependentUpon>
+    </Compile>
     <Compile Include="Redis\FormRedisSubscribe.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -582,6 +588,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PLC\FormLsisFEnet.resx">
       <DependentUpon>FormLsisFEnet.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PLC\FormToyopuc.resx">
+      <DependentUpon>FormToyopuc.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Redis\FormRedisSubscribe.resx">
       <DependentUpon>FormRedisSubscribe.cs</DependentUpon>
